--- a/index.html
+++ b/index.html
@@ -50,7 +50,10 @@
 		Favicons
 	-->
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+
+	<script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
 	<style>
+	
 
 	.rc-anchor-pt {
 	  display: none;
