--- a/index.html
+++ b/index.html
@@ -50,6 +50,15 @@
 		Favicons
 	-->
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
+	<script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+<script>
+grecaptcha.ready(function() {
+    grecaptcha.execute('_reCAPTCHA_site_key_', {action: 'homepage'}).then(function(token) {
+       ...
+    });
+});
+</script>
+	
 
 	<script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
 	<style>
