--- a/index.html
+++ b/index.html
@@ -50,10 +50,10 @@
 		Favicons
 	-->
 	<link rel="shortcut icon" href="images/favicons/favicon.ico">
-	<script src="https://www.google.com/recaptcha/api.js?render=_reCAPTCHA_site_key"></script>
+	<script src="https://www.google.com/recaptcha/api.js?render=6Lcb7b8UAAAAAAGDH3wEgfnukyPfFhiLPaRlGB97"></script>
 <script>
 grecaptcha.ready(function() {
-    grecaptcha.execute('_reCAPTCHA_site_key_', {action: 'homepage'}).then(function(token) {
+    grecaptcha.execute('6Lcb7b8UAAAAAAGDH3wEgfnukyPfFhiLPaRlGB97', {action: 'homepage'}).then(function(token) {
        ...
     });
 });
