--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@ else {  alert('I lied! Its not a banana.'); password.setSelectionRange(0, passwo
 
 							<!-- work item photo -->
 
-<div class='embed-container'>
-  <iframe src='https://player.vimeo.com/video/703868627?h=437634a54d' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+<div class="embed-container">
+  <iframe src="https://player.vimeo.com/video/703868627?h=437634a54d" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 
 							<!-- work item video -->
@@ -762,8 +762,8 @@ else {  alert('I lied! Its not a banana.'); password.setSelectionRange(0, passwo
 							<!-- work item music -->
 									</br>
 									<div class="title">Showreel 2018</div>
-									<div class='embed-container'>
-  <iframe src='https://www.youtube.com/embed/TLzT2v0s-B0' frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
+									<div class="embed-container">
+  <iframe src="https://www.youtube.com/embed/TLzT2v0s-B0" frameborder='0' webkitAllowFullScreen mozallowfullscreen allowFullScreen></iframe>
 </div>
 </br>
 <p> </p>
@@ -894,7 +894,7 @@ else {  alert('I lied! Its not a banana.'); password.setSelectionRange(0, passwo
 								<div class="map" id="map"></div>
 								<div class="info-list">
 									<ul>
-										<li><strong>Age . . . . .</strong> 24</li>
+										<li><strong>Age . . . . .</strong> 26</li>
 										<li><strong>Email . . . . .</strong> Click here</li>
 										<li><strong>Contract . . . . .</strong> Available</li>
 										<li><strong>Address . . . . .</strong> London, UK</li>
