--- a/index.html
+++ b/index.html
@@ -710,7 +710,7 @@
 		<div class="title">Please enter password to view Showreels</div>
                 <input placeholder="Password tip = banana" type="password" id="password" onkeydown="if (event.keyCode == 13) document.getElementById('button').click()" />
 
-								<input id="button" type="button" value="Confirm" onclick="if (document.getElementById('password').value == 'banana123') { document.getElementById('HIDDENDIV').style.visibility = 'visible';   document.getElementById('passw').style.display='none'; }
+								<input id="button" type="button" value="Confirm" onclick="if (document.getElementById('password').value == 'uk2022') { document.getElementById('HIDDENDIV').style.visibility = 'visible';   document.getElementById('passw').style.display='none'; }
 else {  alert('I lied! Its not a banana.'); password.setSelectionRange(0, password.value.length);   } " />
 </div>
 
