--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 	<meta name="description" content="Portfolio and resume" />
 	<meta name="keywords" content="portfolio, resume, motion graphics, vfx, compositing, 3d modeling, animation, uros kete, uros, kete, 3d" />
 	<meta name="author" content="uk" />
+
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://www.linkedin.com/in/uroskete/">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Uros Kete">
+<meta property="og:description" content="CV - Porfolio and Resume
+Email: kete.uros@gmail.com
+Phone: +44 07907079888
+">
+<meta property="og:image" content="">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="">
+<meta property="twitter:url" content="https://www.linkedin.com/in/uroskete/">
+<meta name="twitter:title" content="Uros Kete">
+<meta name="twitter:description" content="CV - Porfolio and Resume
+Email: kete.uros@gmail.com
+Phone: +44 07907079888
+">
+<meta name="twitter:image" content="">
+
 	<!--
 		Load Fonts
 	-->
