--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 	<meta name="keywords" content="portfolio, resume, motion graphics, vfx, compositing, 3d modeling, animation, uros kete, uros, kete, 3d" />
 	<meta name="author" content="uk" />
 
+	<meta property='og:title' content='Uros Kete'/>
+<meta property='og:image' content='https://uroskete.co.uk/uros-kete-se.jpg'/>
+<meta property='og:description' content='CV - portfolio and resume'/>
+<meta property='og:url' content='https://uroskete.co.uk/uros-kete-se.jpg'/>
+
+
 
 <!-- Facebook Meta Tags -->
 <meta property="og:url" content="https://www.linkedin.com/in/uroskete/">
@@ -22,7 +28,7 @@
 Email: kete.uros@gmail.com
 Phone: +44 07907079888
 ">
-<meta property="og:image" content="">
+<meta property="og:image" content="https://uroskete.co.uk/uros-kete-se.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -33,7 +39,7 @@ Phone: +44 07907079888
 Email: kete.uros@gmail.com
 Phone: +44 07907079888
 ">
-<meta name="twitter:image" content="">
+<meta name="twitter:image" content="https://uroskete.co.uk/uros-kete-se.jpg">
 
 	<!--
 		Load Fonts
