--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<meta property='og:title' content='Uros Kete'/>
 <meta property='og:image' content='https://uroskete.co.uk/uros-kete-se.jpg'/>
 <meta property='og:description' content='CV - portfolio and resume'/>
-<meta property='og:url' content='https://uroskete.co.uk/uros-kete-se.jpg'/>
+<meta property='og:url' content='https://uroskete.co.uk/uros-kete.jpg'/>
 
 
 
@@ -24,22 +24,16 @@
 <meta property="og:url" content="https://www.linkedin.com/in/uroskete/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Uros Kete">
-<meta property="og:description" content="CV - Porfolio and Resume
-Email: kete.uros@gmail.com
-Phone: +44 07907079888
-">
-<meta property="og:image" content="https://uroskete.co.uk/uros-kete-se.jpg">
+<meta property="og:description" content="CV - Porfolio and Resume">
+<meta property="og:image" content="https://uroskete.co.uk/uros-kete.jpg">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
 <meta property="twitter:domain" content="">
 <meta property="twitter:url" content="https://www.linkedin.com/in/uroskete/">
 <meta name="twitter:title" content="Uros Kete">
-<meta name="twitter:description" content="CV - Porfolio and Resume
-Email: kete.uros@gmail.com
-Phone: +44 07907079888
-">
-<meta name="twitter:image" content="https://uroskete.co.uk/uros-kete-se.jpg">
+<meta name="twitter:description" content="CV - Porfolio and Resume">
+<meta name="twitter:image" content="https://uroskete.co.uk/uros-kete.jpg">
 
 	<!--
 		Load Fonts
