--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<meta name="author" content="uk" />
 
 	<meta property='og:title' content='Uros Kete'/>
-<meta property='og:image' content='https://uroskete.co.uk/uros-kete-se.jpg'/>
+<meta property='og:image' content='https://uroskete.co.uk/uros-kete.jpg'/>
 <meta property='og:description' content='CV - portfolio and resume'/>
 <meta property='og:url' content='https://uroskete.co.uk/uros-kete.jpg'/>
 
