--- a/index.html
+++ b/index.html
@@ -8,13 +8,17 @@
 	<meta charset="UTF-8" />
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Uros Kete</title>
+	<meta name="description" content="CV - Porfolio and Resume">
+
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-	<meta name="description" content="Portfolio and resume" />
 	<meta name="keywords" content="portfolio, resume, motion graphics, vfx, compositing, 3d modeling, animation, uros kete, uros, kete, 3d" />
 	<meta name="author" content="uk" />
 
+
+
+
 <!-- Facebook Meta Tags -->
-<meta property="og:url" content="https://www.linkedin.com/in/uroskete/">
+<meta property="og:url" content="https://uroskete.co.uk/">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Uros Kete">
 <meta property="og:description" content="CV - Porfolio and Resume">
@@ -22,11 +26,14 @@
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
-<meta property="twitter:domain" content="">
-<meta property="twitter:url" content="https://www.linkedin.com/in/uroskete/">
+<meta property="twitter:domain" content="uroskete.co.uk">
+<meta property="twitter:url" content="https://uroskete.co.uk/">
 <meta name="twitter:title" content="Uros Kete">
 <meta name="twitter:description" content="CV - Porfolio and Resume">
 <meta name="twitter:image" content="https://uroskete.co.uk/uros-kete.jpg">
+
+
+      
 
 	<!--
 		Load Fonts
