--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
 					<!-- profile photo -->
 					<div class="image">
-						<img src="images/profile.jpg" alt="" />
+						<img src="images/profile2.jpg" alt="" />
 					</div>
 
 					<!-- profile titles -->
