--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
 							<div class="col col-d-12 col-t-12 col-m-12 border-line-v">
 								<div class="text-box">
 									<p>
-										Dynamic and result-oriented professional with three years of experience in Video Production and Web Design.
+										Dynamic and result-oriented professional with six years of experience in Video Production and Web Design.
 										 Highly skilled and creative Video Editor with experience in all aspects of video production.
 										 Able to handle multiple projects simuntaneously with ease and professionalism.
 									 </p>
