--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 								</div>
 								<div class="info-list">
 									<ul>
-										<li><strong>Age . . . . .</strong> 26</li>
+										<li><strong>Age . . . . .</strong> </li>
 
 										<li><strong>Contract . . . . .</strong> Available</li>
 										<li><strong>Address . . . . .</strong> London, UK</li>
