--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 
 					<!-- profile titles -->
 					<div class="title">Uroš Kete</div>
-					<div class="subtitle"><b>Motion Graphics Designer, 3D Generalist, VFX Artist</b></div>
+					<div class="subtitle"><b>FX-TD, 3D Generalist, VFX Artist</b></div>
 
 					<!-- profile socials -->
 					<div class="social">
@@ -266,8 +266,8 @@
 							<div class="col col-d-12 col-t-12 col-m-12 border-line-v">
 								<div class="text-box">
 									<p>
-										Dynamic and result-oriented professional with six years of experience in Video Production and Web Design.
-										 Highly skilled and creative Video Editor with experience in all aspects of video production.
+										Dynamic and result-oriented professional with six years of experience.
+										 Highly skilled and creative professional with experience in all aspects of production.
 										 Able to handle multiple projects simuntaneously with ease and professionalism.
 									 </p>
 										 <p>
@@ -277,7 +277,7 @@
 								</div>
 								<div class="info-list">
 									<ul>
-										<li><strong>Age . . . . .</strong> </li>
+										<!-- <li><strong>Age . . . . .</strong> </li> -->
 
 										<li><strong>Contract . . . . .</strong> Available</li>
 										<li><strong>Address . . . . .</strong> London, UK</li>
