added faster loading hero

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
             <a href="https://vimeo.com/703868627"
               ><div
                 class="slide"
-                style="background-image: url(images/portfolio_2.gif)"
+                style="background-image: url(images/project_hades2.png)"
               ></div
             ></a>
 
@@ -244,14 +244,14 @@
             <!-- profile buttons -->
             <div class="lnks">
               <a
-                href="#"
+                href="https://uroskete.co.uk/uros_kete_cv_v01.pdf"
                 onClick="var pwd48 = prompt('Please enter password')"
                 class="lnk"
               >
-                <span class="text"> Download CV</span>
+                <span class="text">View my CV</span>
                 <span class="ion ion-archive"></span>
               </a>
-              <a href="/uros_kete_cv_v01.pdf" class="lnk discover">
+              <a href="https://uroskete.co.uk/uros_kete_cv_v01.pdf" class="lnk discover">
                 <span class="text">Contact Me</span>
                 <span class="arrow"></span>
               </a>
