changed download button

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
 
             <!-- profile titles -->
             <div class="title">Uroš Kete</div>
-            <div class="subtitle"><b>FX-TD, 3D Generalist, VFX Artist</b></div>
+            <div class="subtitle"><b>FX-TD, 3D Generalist, Motion Graphics Designer</b></div>
 
             <!-- profile socials -->
             <div class="social">
@@ -243,12 +243,8 @@
 
             <!-- profile buttons -->
             <div class="lnks">
-              <a
-                href="https://uroskete.co.uk/uros_kete_cv_v01.pdf"
-                onClick="var pwd48 = prompt('Please enter password')"
-                class="lnk"
-              >
-                <span class="text">View my CV</span>
+              <a href="https://uroskete.co.uk/uros_kete_cv_v01.pdf" class="lnk discover">
+                <span class="text">Download CV</span>
                 <span class="ion ion-archive"></span>
               </a>
               <a href="https://uroskete.co.uk/uros_kete_cv_v01.pdf" class="lnk discover">
