added download stuff

--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
             <!-- profile buttons -->
             <div class="lnks">
-              <a href="https://uroskete.co.uk/uros_kete_cv_v01.pdf" class="lnk discover">
+              <a href="/uros_kete_cv_v01.pdf" download class="lnk discover">
                 <span class="text">Download CV</span>
                 <span class="ion ion-archive"></span>
               </a>
