--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <span class="text">Download CV</span>
                 <span class="ion ion-archive"></span>
               </a>
-              <a href="https://uroskete.co.uk/uros_kete_cv_v01.pdf" class="lnk discover">
+              <a href="https://uroskete.co.uk/uros_kete_cv_p_v01.pdf" class="lnk discover">
                 <span class="text">Contact Me</span>
                 <span class="arrow"></span>
               </a>
